# cyano-serralysins

./: .gitignore  LICENSE  cycog-kegg-annotations.ipynb  pyproject.toml  testnb.ipynb
cycog-tree-tool/: 60000046-clade.tsv  clade-template1.txt  clade-template3.txt  clade_template_fin.txt  complete_template.txt  continuous_filtering.ipynb  cycog-tree-tool.ipynb  fasta_lengths.ipynb  gene_labels.ipynb  genelabel_temp1.txt  genelabel_temp3.txt  genelabel_temp5.txt  island-survey.ipynb  ortholog_census.ipynb  plotting_orth.ipynb  taxa_template.txt
cycog_neighbors/: cycog_neighbors.ipynb
data/: assemble-data-inputs.ipynb
data/metadata/: updated-genome-clades.csv
genomic-islands/: ortholog_census.ipynb
island-analysis/: cycog_neighbors.ipynb
results/1-serralysin-cycogs/: cycog-kegg-annotations.ipynb
results/2-phylogenies/: get-cycog-genes-aa.sh  get-cycog-proteins.sh
scripts/: fasta_length_hist.py  node-id-metadata.sh  raxml_script.sh
scripts/cycog-tree-tool/: get-cycog-genes.sh  node-id-metadata.sh
scripts/cycog-tree-tool/1-get_cycog/: Readme-1.txt  get-cycog-genes-aa.sh  get-cycog-genes-nt.sh
scripts/cycog-tree-tool/2-cycog_lengths/: 1888-aligned.faa  2365-ann.tsv  60002365-clades.txt  60002365-leaf-labels.tsv  60002365-taxa.txt  60002365.tsv  Readme-2.txt  clade_template.txt  cycogsgenomes.tsv  fasta_lengths.ipynb  genome-metadata.csv  get-cycog-genes-aa.sh  serralysin_cycog_references.csv
scripts/cycog-tree-tool/3-align_cycog/: Readme-3.txt  muscle_algn.py
scripts/cycog-tree-tool/4-trim_realign/: Readme-4.txt
(+5 files in other folders)
