[tool.poetry]
name = "cyano-serralysins"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cyano_serralysins"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.12"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
pycmap = "^0.2.19"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
xarray = "^2023.9.0"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
biopython = "^1.81"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

